10/29/10 add geometry of battery to model, needed by voltmeter and collision detection
# 0.00.35 (45524) Oct 28, 2010
10/28/10 demonstrate progress on E-field detector
10/27/10 test app for detector wire
10/27/10 fix "Show Values" control in detector so that it doesn't hide vector labels
10/25/10 clip vectors to display area
10/25/10 fix initial layout of field detector
10/25/10 combine vector label and value to simplify detector layout code
10/24/10 center labels and values above/below tails of detector vectors, labels above values
10/24/10 decided E-field in battery will be zero, because field detector shows capacitor-specific field vectors (Noah P)
10/24/10 remove dielectric gap from model, per Noah P.
10/24/10 show absolute values in field detector, with no comma in numbers
10/24/10 model for detector vectors: 0 outside plates, either air or dielectric inside plates
# 0.00.34 (45344) Oct 22, 2010
10/22/10 dev version for discussion with Noah P.
10/21/10 demonstrate dielectric gap = 0
10/21/10 revert BatteryCapacitorCircuit.get*At methods for demo
10/21/10 another attempt at BatteryCapacitorCircuit.get*At methods, still need specs
10/21/10 add method for determining if a point is inside dielectric
# 0.00.33 (45314) Oct 21, 2010
10/21/10 dev version for discussion with Noah P.
10/21/10 simplified field detector for Introduction tab (hide vector check boxes, show only Plate vector)
10/21/10 make "Show Values" its own PSwing so that it will always be at lower-left of field detector 
10/21/10 try a simplified naming scheme for string keys, hopefully easier for translators
10/21/10 i18n of vector labels in E-field detector
10/21/10 snapshot of design doc in SVN, for working offline
10/20/10 add vectors to E-field detector
10/19/10 derive negative orientation of current indicator
10/19/10 remove polarity from current indicator, it was misused here
10/19/10 add polarity property to battery
10/18/10 add E-field detector to model, using Property<T> notification